2019-02-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/mailbox_imap.c (lbm_imap_get_msg_part_from_cache):
	plug memory leaks in error return paths;

2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-mime-widget-image.c (img_check_size): avoid scan-build
	false positive.

2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/imap-handle.c (imap_body_from_stringi): guard
	against NULL pointer.

2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-print-object-text.c (collect_attrs): initialize a
	region by structure assignment instead of g_memdup().


2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/send.c (libbalsa_message_create_mime_message): do not
	leak mime_type in error return paths; also reduce scope of
	mime_type.

2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/address.c (vcard_strsplit): eliminate one decrement,
	and add an assertion to avoid a scan-build false positive

2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/mailbox.c (libbalsa_mailbox_view_new): initialize a
	view by structure assignment instead of g_memdup().

2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/address.c (libbalsa_address_new_from_vcard): do not
	leak a string.

2019-02-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Cast weak-pointer-location to (gpointer *) in calls to
	g_object{add,remove}_weak_pointer()

	* libbalsa/identity.c (libbalsa_identity_config_dialog):
	* libbalsa/mailbox_maildir.c (free_message_info):
	* libbalsa/mailbox_mbox.c (free_message_info):
	* libbalsa/mailbox_mh.c (lbm_mh_free_message_info):
	* src/balsa-index.c (bndx_clear_if_last_ref), (bndx_pipe_response):
	* src/balsa-mblist.c (balsa_mblist_get_store),
	(update_mailbox_idle), (bmbl_mailbox_changed_cb):
	* src/balsa-mime-widget-image.c
	(balsa_mime_widget_image_resize_all), (img_check_size):