@@ -1,3 +1,9 @@
+2019-02-22  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	* libbalsa/html.c (lbh_web_view_new): use a static location when
+	registering 'cid:' scheme; fix the regular expression for
+	matching non-cid schemes (it was also matching 'cid:')
+
 2019-02-19  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	* libbalsa/mailbox_imap.c (lbm_imap_get_msg_part_from_cache):
